feat: Refatorando CRUD de filmes e usuários. Criado controller e service para NotaUsuarioFilme.