@@ -7,11 +7,9 @@ import com.fraga.APIRest.dto.UsuarioRequestDTO;
 import com.fraga.APIRest.dto.UsuarioResponseDTO;
 import com.fraga.APIRest.exception.BadCredentialsException;
 import com.fraga.APIRest.exception.InvalidParams;
-import com.fraga.APIRest.repository.FilmeRepository;
 import com.fraga.APIRest.repository.UsuarioRepository;
 import com.fraga.APIRest.security.cripting.PasswordEncripitingBCrypt;
 import com.fraga.APIRest.service.UsuarioService;
-import com.fraga.APIRest.util.validation.SecurityValidations;
 import org.apache.logging.log4j.util.Strings;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
@@ -20,53 +18,45 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.time.LocalDate;
+import java.util.List;
 import java.util.Objects;
+
+import static com.fraga.APIRest.util.PaginacaoUtils.gerarPaginacao;
+import static com.fraga.APIRest.util.PaginacaoUtils.gerarPaginacaoOrdenada;
 
 @Service
 public class UsuarioServiceImpl implements UsuarioService {
 
     private final UsuarioRepository usuarioRepository;
-    private final FilmeRepository filmeRepository;
-    private final SecurityValidations<Usuario> validations;
     private final ModelMapper mapper;
 
-    public UsuarioServiceImpl(UsuarioRepository repository,
-                              FilmeRepository filmeRepository,
-                              SecurityValidations<Usuario> validations,
-                              ModelMapper mapper) {
+    public UsuarioServiceImpl(UsuarioRepository repository, ModelMapper mapper) {
         this.usuarioRepository = repository;
-        this.filmeRepository = filmeRepository;
-        this.validations = validations;
         this.mapper = mapper;
     }
 
     @Override
     public Page<UsuarioResponseDTO> buscarTodosUsuarios(Integer pagina, Integer tamanho) {
-        return usuarioRepository.findAll(PageRequest.of(pagina, tamanho)).map(UsuarioResponseDTO::new);
+        return usuarioRepository.findAll(gerarPaginacao(pagina, tamanho)).map(UsuarioResponseDTO::new);
     }
 
     @Override
-    public UsuarioResponseDTO buscarUsuarioPorId(Long id) {
-        Usuario usuario = buscarPorId(id);
-        return mapper.map(usuario, UsuarioResponseDTO.class);
-    }
-
-    private Usuario buscarPorId(Long id) {
+    public Usuario buscarUsuarioPorId(Long id) {
         return usuarioRepository.findById(id).orElseThrow(
-                () ->  new BadCredentialsException("Usuário de id " + id + " não encontrado.")
+                () -> new InvalidParams("Usuário de id " + id + " não encontrado.")
         );
     }
 
     @Override
     public UsuarioResponseDTO criarNovoUsuario(UsuarioRequestDTO usuarioRequestDTO) {
-        if (Objects.isNull(buscarPorNome(usuarioRequestDTO.getNomeUsuario(), false))){
+        if (Objects.isNull(buscarPorNome(usuarioRequestDTO.getNomeUsuario(), false))) {
             Usuario usuario = mapper.map(usuarioRequestDTO, Usuario.class);
+            usuario.setAtualizadoEm(LocalDate.now());
             adicionarPermissaoUsuarioComum(usuario);
             usuario.setSenha(encriptografarSenha(usuario.getSenha()));
             return mapper.map(usuarioRepository.save(usuario), UsuarioResponseDTO.class);
-        }
-        else{
+        } else {
             throw new InvalidParams("Nome do usuário informado já cadastrado.");
         }
     }
@@ -84,30 +74,43 @@ public class UsuarioServiceImpl implements UsuarioService {
 
     @Override
     public UsuarioResponseDTO buscarUsuarioPorNome(String nomeUsuario) {
-        if(Strings.isBlank(nomeUsuario)){
+        if (Strings.isBlank(nomeUsuario)) {
             throw new BadCredentialsException("O nome do usuário não pode ser vazio!");
         }
         return mapper.map(buscarPorNome(nomeUsuario, true), UsuarioResponseDTO.class);
     }
 
-    private void adicionarPermissaoUsuarioComum(Usuario usuario){
-        usuario.setPermissions(Arrays.asList(new Permission(2, "COMMON_USER")));
+    private void adicionarPermissaoUsuarioComum(Usuario usuario) {
+        usuario.setPermissions(List.of(new Permission(2, "COMMON_USER")));
     }
 
-    private String encriptografarSenha(String senha){
+    private String encriptografarSenha(String senha) {
         return PasswordEncripitingBCrypt.encript(senha);
     }
 
     @Override
     public UsuarioResponseDTO atualizarUsuario(Long id, UsuarioAtualizarDTO usuarioAtualizarDTO) {
-        Usuario usuario = buscarPorId(id);
+        Usuario usuario = buscarUsuarioPorId(id);
         usuario.setNomeCompleto(usuarioAtualizarDTO.getNomeCompleto());
 
         return mapper.map(usuarioRepository.save(usuario), UsuarioResponseDTO.class);
     }
 
     @Override
+    public void desativarUsuario(Long id) {
+        Usuario usuario = buscarUsuarioPorId(id);
+        usuario.setActive(false);
+        usuarioRepository.save(usuario);
+    }
+
+    @Override
+    public Page<UsuarioResponseDTO> buscarTodosUsuariosAtivos(Integer pagina, Integer tamanho) {
+        return usuarioRepository.buscarUsuariosAtivos(gerarPaginacao(pagina, tamanho)).map(UsuarioResponseDTO::new);
+    }
+
+    @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         return usuarioRepository.loadUserByUsername(username);
     }
+
 }
